--- a/packages/alpine/style.css
+++ b/packages/alpine/style.css
@@ -19,6 +19,10 @@ body {
   margin: 0;
 }
 
+.wrapper {
+	width: 100%;
+}
+
 .page {
   height: 100vh;
   width: 100%;
@@ -27,12 +31,16 @@ body {
   justify-content: center;
   flex-direction: column;
 	overflow: clip;
+	box-sizing: border-box;
 }
 
 .carousel {
 	display: flex;
 	gap: 1rem;
-	padding: 1rem;
+	scroll-snap-type: x mandatory;
+	scroll-snap-stop: always;
+	width: 100%;
+	scroll-padding: 4rem;
 }
 
 .slide {
@@ -41,7 +49,19 @@ body {
   aspect-ratio: 3/4;
   border-radius: 1rem;
   background-color: #404040;
-  scroll-snap-align: center;
-	padding: 1rem;
-	display: block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  /* scroll-snap-align: center; */
+
+	&:nth-child(3n+1) {
+    scroll-snap-align: start;
+		background-color: #606060;
+  }
+}
+
+.controls {
+	display: flex;
+	justify-content: center;
+	gap: 0.5rem;
 }
