feat(prev/next): use css snap alignment from element

--- a/packages/core/src/style.css
+++ b/packages/core/src/style.css
@@ -10,9 +10,9 @@
   max-inline-size: 100vw;
   box-sizing: border-box;
 
-  &:is(ul) {
+	/* &:is(ul) {
     padding-inline-start: 0;
-  }
+  } */
 
   /* hide scrollbar */
   scrollbar-width: none;
